Add files via upload
Fixing path issue.
1. Changing all the paths to be under resource directory.
2. Using java.nio.file.Path to support both Windowd and Linux
Also, A non tested code for synching complianceGroup values edited in Salesforce to correlationSet attributes in correlation page